@@ -1,6 +1,7 @@
 0.88(2018-10-24) (unreleased)
 -----------------
 - Fix: Update UTF8Proc to 2.2.0
+- Fix: Warn instead of fatal when a 0xFF marker is missing
 
 0.87 (2018-10-23)
 -----------------
